--- a/app/assets/stylesheets/_post-index.scss
+++ b/app/assets/stylesheets/_post-index.scss
@@ -1,5 +1,25 @@
 @import "global";
 
+@mixin category_btn($color){
+  color: #fff;
+  border: solid 1px $color;
+  background-color: $color;
+}
+
+@mixin category_name($color){
+  color: $color;
+  border: solid 1px $color;
+  padding: 5px 15px 5px 15px;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+@mixin category_name_hover($color){
+  background-color: $color;
+  color: #fff;
+  text-decoration: none;
+}
+
 .post-container {
   margin-top: 25px;
 }
@@ -19,29 +39,19 @@
         right: 10px;
       }
       .btn-Ruby {
-        color: #fff;
-        border: solid 1px $Ruby;
-        background-color: $Ruby;
+        @include category-btn($Ruby);
       }
       .btn-Go {
-        color: #fff;
-        border: solid 1px $Go;
-        background-color: $Go;
+        @include category-btn($Go);
       }
       .btn-Javascript {
-        color: #fff;
-        border: solid 1px $Javascript;
-        background-color: $Javascript;
+        @include category-btn($Javascript);
       }
       .btn-React {
-        color: #fff;
-        border: solid 1px $React;
-        background-color: $React;
+        @include category-btn($React);
       }
       .btn-Life {
-        color: #fff;
-        border: solid 1px $Life;
-        background-color: $Life;
+        @include category-btn($Life)
       }
     }
     .Ruby {
@@ -108,6 +118,46 @@
   .post-created-on {
     color: #A9A9A9;
     font-weight: lighter;
+    margin-left: 15px;
     letter-spacing: 1px;
   }
+}
+.category-Ruby {
+  @include category_name($Ruby)
+}
+
+.category-Ruby:hover {
+  @include category_name_hover($Ruby)
+}
+
+.category-Go {
+  @include category_name($Go)
+}
+
+.category-Go:hover {
+  @include category_name_hover($Go)
+}
+
+.category-Javascript {
+  @include category_name($Javascript)
+}
+
+.category-Javascript:hover {
+  @include category_name_hover($Javascript)
+}
+
+.category-React {
+  @include category_name($React)
+}
+
+.category-React:hover {
+  @include category_name_hover($React)
+}
+
+.category-Life {
+  @include category_name($Life)
+}
+
+.category-Life:hover {
+  @include category_name_hover($Life)
 }
