added font-awesome and some stylings

--- a/app/assets/stylesheets/_highlight.scss
+++ b/app/assets/stylesheets/_highlight.scss
@@ -21,6 +21,10 @@ a {
   color: #4183c4;
   text-decoration: none; }
 
+.fa-link {
+  margin-right: 8px;
+}
+
 #wrapper {
   background-color: #fff;
   padding: 30px;
