--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
     <div class = 'container-fluid'>
       <%= yield %>
     </div>
-    <footer></footer>
+    <footer>
+      <p>Designed and coded by <a href = 'https://github.com/KatsukiSato'>K-Sato</a></p>
+    </footer>
   </body>
 </html>
