--- a/app/views/posts/_nav.html.erb
+++ b/app/views/posts/_nav.html.erb
@@ -39,7 +39,9 @@
     </div>
 
     <div class = 'snn-links'>
-      
+      <a href = 'https://github.com/KatsukiSato'><%= fa_icon "github",  class: "fa-2x" %></a>
+      <a href = 'https://twitter.com/'><%= fa_icon "twitter", class: "fa-2x" %></a>
+      <a href = 'https://www.google.com/'><%= fa_icon "google", class: "fa-2x" %></a>
     </div>
   </div>
      <% if user_signed_in? %>
