--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,7 +1,22 @@
+@import "global";
+
 footer {
+  bottom: 0;
   margin-top: 100px;
   height: 60px;
   width: 100%;
   border-top: solid 1px #efefef;
   background-color: #fff;
+  p {
+    font-size: 17px;
+    margin-right: 50px;
+    margin-top: 25px;
+    float: right;
+    color: #B8BEC1;
+    bottom: 0;
+    letter-spacing: 1px;
+  }
+  a {
+    color: $theme-color;
+  }
 }
