--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require 'masonry/transitions'
  *= require_self
  */
+ @import "font-awesome";
  @import "bootstrap";
  @import "highlight";
  @import "global";
