--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
       </p>
      <hr/>
       <div class="post-context">
-         <%= qiita_markdown(@post.context) %>
+         <%= markdown(@post.context) %>
       </div>
       <hr/>
       <a href="#top"><%= fa_icon "angle-up" , base: "square", class: "fa-3x go-top" %></a>
