--- a/app/assets/stylesheets/_highlight.scss
+++ b/app/assets/stylesheets/_highlight.scss
@@ -162,14 +162,14 @@ img {
   max-width: 100%; }
 
 code, tt {
-  margin: 0 2px;
-  padding: 0 5px;
+  margin: 3px;
+  padding: 4px;
   white-space: nowrap;
   border: 1px solid #eaeaea;
   background-color: #f8f8f8;
   border-radius: 3px;
   font-family: Consolas, 'Liberation Mono', Courier, monospace;
-  font-size: 12px;
+  font-size: 15px;
   color: #333333; }
 
 pre > code {
@@ -185,7 +185,7 @@ pre > code {
   font-size: 13px;
   line-height: 19px;
   overflow: auto;
-  padding: 6px 10px;
+  padding: 10px;
   border-radius: 3px; }
 
 pre {
