--- a/app/assets/stylesheets/_highlight.scss
+++ b/app/assets/stylesheets/_highlight.scss
@@ -156,7 +156,8 @@ table {
     border-top: 1px solid #ccc;
     background-color: #fff; }
     table tr:nth-child(2n) {
-      background-color: #f8f8f8; }
+      background-color: #f8f8f8;
+    }
 
 img {
   max-width: 100%; }
