--- a/app/views/posts/_nav.html.erb
+++ b/app/views/posts/_nav.html.erb
@@ -50,9 +50,9 @@
 </nav>
 
 <script>
-  let homeSideBar = document.getElementById('navbarSide')
-  let homeSideBar2 = document.getElementById('navbarSide2')
-  let overlay = document.getElementById('overlay')
+  var homeSideBar = document.getElementById('navbarSide')
+  var homeSideBar2 = document.getElementById('navbarSide2')
+  var overlay = document.getElementById('overlay')
 
   function openHomeSideBar(){
     homeSideBar.classList.add('reveal');
