--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -51,7 +51,7 @@
             <td><%= post.updated_at.strftime("%Y/%m/%d") %></td>
             <td>
               <%= link_to 'Edit', edit_admin_post_path(post) %>
-              <%= link_to 'Devare',admin_post_path(post), method: :devare, data: { confirm: 'Are you sure?' } %>
+              <%= link_to 'Delete',admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
             </td>
           </tr>
           <% end %>
