commented out preview feature

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -25,8 +25,8 @@
 
 <div class="form-group">
   <div class="row">
-    <%= f.text_area :context , cols: "30", rows: "20", placeholder:'Context', id: 'context', class:"col-md-6 form-control", onchange:"setPreview(this.value)"%>
-    <div id="preview" class = "col-md-6 form-control">Preview</div>
+    <%= f.text_area :context , cols: "30", rows: "20", placeholder:'Context', id: 'context', class:"col-md-12 form-control", onchange:"setPreview(this.value)"%>
+    <!-- <div id="preview" class = "col-md-6 form-control">Preview</div> -->
   </div>
 </div>
 
@@ -43,8 +43,8 @@
   </div>
 </div>
 
-<script>
+<!-- <script>
   var preview_content = document.getElementById('preview')
   var context = document.getElementById('context')
   preview_content.innerHTML = markdown.toHTML(context.value);
-</script>
+</script> -->
