added intro to posts

--- a/app/assets/stylesheets/_post-index.scss
+++ b/app/assets/stylesheets/_post-index.scss
@@ -75,21 +75,21 @@
         color: $Life;
       }
     }
-    .Ruby {
-      border-bottom: solid 3px $Ruby;
-    }
-    .Go {
-      border-bottom: solid 3px $Go;
-    }
-    .Javascript {
-      border-bottom: solid 3px $Javascript;
-    }
-    .React {
-      border-bottom: solid 3px $React;
-    }
-    .Life {
-      border-bottom: solid 3px $Life;
-    }
+    // .Ruby {
+    //   border-bottom: solid 3px $Ruby;
+    // }
+    // .Go {
+    //   border-bottom: solid 3px $Go;
+    // }
+    // .Javascript {
+    //   border-bottom: solid 3px $Javascript;
+    // }
+    // .React {
+    //   border-bottom: solid 3px $React;
+    // }
+    // .Life {
+    //   border-bottom: solid 3px $Life;
+    // }
     .post-title {
       color: #21252A;
       font-size: 20px;
