--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -19,6 +19,12 @@
 
 <div class="form-group">
   <div class="row">
+    <%= f.text_area :intro, placeholder:'Introduction (less than 100 letters)', class:"col-md-12 form-control"%>
+  </div>
+</div>
+
+<div class="form-group">
+  <div class="row">
     <%= f.text_field :image, placeholder:'Post Image', class:"col-md-12 form-control"%>
   </div>
 </div>
