--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,6 +4,7 @@
           <%= link_to (image_tag post.image, class: 'image'), post_path(post.id)%>
          <div class="card-body">
            <%= link_to post.title, post_path(post.id), class:'post-title'%><hr>
+           <%= truncate( post.intro, :length => 100, :separator => ' ')%><hr>
            <%= link_to post.category_name, posts_path(category: post.category.id), id: 'c-btn', class: "btn btn-outline-info btn-#{post.category_name}"%>
          </div>
        </div>
