--- a/app/assets/stylesheets/_admin.scss
+++ b/app/assets/stylesheets/_admin.scss
@@ -21,9 +21,18 @@
   padding-left: 250px;
   height: 100%;
   width: 100%;
-  // border: solid 4px;
-  .admin-content {
-    // border: solid 1px;
+  .nav {
+    margin-top: 30px;
+  }
+  .posts-table {
+    border: solid  1px #DEE2E6;
+    border-top: none;
+  }
+  .chart {
+    margin-left: 20px;
+  }
+  .chart2 {
+    margin-left: 30px;
   }
 }
 
