--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,9 @@
 <div class="show-container">
   <div class = 'row'>
-    <div class="col-md-2">
+    <div class="col-xs-0 col-sm-0 col-md-2 nav-area">
       <%= render 'nav' %>
     </div>
-    <div class = 'col-md-10 article-container'>
+    <div class = 'col-xs-12 col-sm-12 col-md-10 article-container'>
      <h3 class="mt-4"><%=@post.title%></h3>
      <hr/>
        <p>
