--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -1,6 +1,6 @@
 @media (max-width: 576px) {
 /////////////NAV//////////////////////////
-  .navbar, .nav-intro, .intro-body, .snn-links, .search-bar, .link-list, .navbar-side, .navbar-side2, .nav-area   {
+  .navbar, .nav-intro, .intro-body, .snn-links, .search-bar, .link-list, .nav-area   {
     display: none;
   }
   .mobile-nav {
@@ -96,5 +96,43 @@
   right: 30%;
   margin-top: 30px;
  }
+/////////////////////////////////dropdown-menu
+  .mobile-dropdown {
+    visibility: hidden;
+    position: absolute;
+    top: 70px;
+    width: 100%;
+    border-bottom: solid 1px #efefef;
+    background-color: #fff;
+    z-index: 5000;
+  }
 
+  .mobile-dropdown-list {
+    list-style: none;
+    display: inline;
+  }
+
+  .mobile-dropdown-item {
+    margin: 10px;
+    padding: 15px;
+    letter-spacing: 1.5px;
+    text-align: center;
+    border-bottom: solid 1px #efefef;
+    cursor: pointer;
+    color: #757575;
+    font-size: 20px;
+  }
+
+  .mobile-dropdown-item:hover {
+    color: #757575;
+    background-color: #efefef;
+  }
+
+  .navbar-side {
+    width: 50%;
+  }
+
+  .navbar-side2 {
+    width: 50%;
+  }
 }
