changed the color of drop nav

--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -104,7 +104,7 @@
     top: 70px;
     width: 100%;
     border-bottom: solid 1px #efefef;
-    background-color: #fff;
+    background-color:rgba(192,192,192,0.9);
   }
 
   .mobile-dropdown-list {
@@ -117,9 +117,9 @@
     padding: 15px;
     letter-spacing: 1.5px;
     text-align: center;
-    border-bottom: solid 1px #efefef;
+    border-bottom: solid 1px #fff;
     cursor: pointer;
-    color: #757575;
+    color: #222;
     font-size: 20px;
   }
 
