--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'mobile_nav' %>
+<div class = 'container-fluid'>
   <div class = 'row'>
     <!-- SIDE-NAV -->
     <div class="nav-area col-xs-0 col-sm-0 col-md-2">
@@ -21,7 +23,7 @@
       </div>
     </div>
   </div>
-
+</div>
 <script>
 //Box FadeIn
 $(".box").each(function(index) {
