--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,41 +1,43 @@
-<div class="show-container">
-  <div class = 'row'>
-    <div class="col-xs-0 col-sm-0 col-md-2 nav-area">
-      <%= render 'nav' %>
-    </div>
-    <div class = 'col-xs-12 col-sm-12 col-md-10 article-container'>
-     <h3 class="mt-4"><%=@post.title%></h3>
-     <hr/>
-       <p>
-         <%= link_to "#{@post.category_name}", posts_path(category: @post.category.id), class:"category-#{@post.category_name}" %>
-         <span class = 'post-created-on'>Posted on <%= @post.created_at.strftime("%Y-%m-%d") %></span>
-      </p>
-     <hr/>
-      <div class="post-context">
-         <%= markdown(@post.context) %>
+<%= render 'mobile_nav' %>
+<div class = 'container-fluid'>
+  <div class="show-container">
+    <div class = 'row'>
+      <div class="col-xs-0 col-sm-0 col-md-2 nav-area">
+        <%= render 'nav' %>
       </div>
-      <hr/>
-      <!--RELATED POSTS  -->
-      <h4 class = 'related-post-column'>Related Posts</h4>
-      <div class = 'related-posts'>
-          <% @related_posts.each do |post| %>
-              <div class="related-posts-box">
-                <div class= "card related-post-card">
-                   <%= link_to (image_tag post.image, class: 'related-post-image'), post_path(post.id)%>
-                   <div class="card-body">
-                     <%= link_to post.title, post_path(post.id), class:'related-post-title'%><hr>
-                     <p class = 'related-post-intro'><%= truncate( post.intro, :length => 100, :separator => ' ' )%></p><hr>
-                     <%= link_to post.category_name, posts_path(category: post.category.id), class:"category-#{@post.category_name}"%>
-                     </div>
-                </div>
-             </div>
-        <% end %><!-- of @related_posts.each -->
+      <div class = 'col-xs-12 col-sm-12 col-md-10 article-container'>
+       <h3 class="mt-4"><%=@post.title%></h3>
+       <hr/>
+         <p>
+           <%= link_to "#{@post.category_name}", posts_path(category: @post.category.id), class:"category-#{@post.category_name}" %>
+           <span class = 'post-created-on'>Posted on <%= @post.created_at.strftime("%Y-%m-%d") %></span>
+        </p>
+       <hr/>
+        <div class="post-context">
+           <%= markdown(@post.context) %>
+        </div>
+        <hr/>
+        <!--RELATED POSTS  -->
+        <h4 class = 'related-post-column'>Related Posts</h4>
+        <div class = 'related-posts'>
+            <% @related_posts.each do |post| %>
+                <div class="related-posts-box">
+                  <div class= "card related-post-card">
+                     <%= link_to (image_tag post.image, class: 'related-post-image'), post_path(post.id)%>
+                     <div class="card-body">
+                       <%= link_to post.title, post_path(post.id), class:'related-post-title'%><hr>
+                       <p class = 'related-post-intro'><%= truncate( post.intro, :length => 100, :separator => ' ' )%></p><hr>
+                       <%= link_to post.category_name, posts_path(category: post.category.id), class:"category-#{@post.category_name}"%>
+                       </div>
+                  </div>
+               </div>
+          <% end %><!-- of @related_posts.each -->
+        </div>
       </div>
     </div>
+    <a href="#top"><%= fa_icon "angle-up" , base: "square", class: "fa-3x go-top" %></a>
   </div>
-  <a href="#top"><%= fa_icon "angle-up" , base: "square", class: "fa-3x go-top" %></a>
 </div>
-
 <script>
 $("a[href='#top']").click(function() {
    $("html, body").animate({ scrollTop: 0 }, "slow");
