--- a/app/assets/stylesheets/_post-index.scss
+++ b/app/assets/stylesheets/_post-index.scss
@@ -178,11 +178,12 @@
 //////////////////////////Pagination////////////////////////////////////
 .pagination {
   position: absolute;
-  margin: 0 auto;
-  bottom: -90px;
-  left: 45%;
+  text-align: center;
   padding: 20px;
+  left: 45%;
   .page-link {
+    width: 200px;
+    left: -100px;
     color: $theme-color;
     border-radius: 5px;
     padding: 10px;
