--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -12,6 +12,7 @@ $theme-color: #20AD9F;
 
 body{
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #F9F9F9;
 }
 h1, h2, h3, h4, h5 {
   color: $h-color;
