--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -21,10 +21,11 @@
   padding: 0;
   margin:0;
   list-style: none;
-  border-right: 1px solid #EFEFEF;
+  // border-right: 1px solid #EFEFEF;
   overflow-y: scroll;
   letter-spacing: 2px;
   padding: 15px 15px 15px 30px;
+  // box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.35);
   .nav-intro {
     position: absolute;
     top: 40px;
